style: 优化代码,减少警告